Fix seperator color and signup text alignment

--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -7,6 +7,7 @@
 
 .c-footer__separator {
   color: #8a8b8e;
+  background-color: #e3e8f0;
 }
 
 .love {
